Update 'zj43fuier-python' component image to: quay.io/rhtap_qe/rhtap-qe-python:41af2bd923dd70a98ba5f556607028834f7e0367@sha256:5eac8e81f2e5c1afd6cf12ce7f9c39b9fc4fa7bf0d8bac5ec140daf7afcbef1b

--- a/components/zj43fuier-python/overlays/development/deployment-patch.yaml
+++ b/components/zj43fuier-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: zj43fuier-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-python:41af2bd923dd70a98ba5f556607028834f7e0367@sha256:5eac8e81f2e5c1afd6cf12ce7f9c39b9fc4fa7bf0d8bac5ec140daf7afcbef1b
+          name: container-image
